--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.apk
 *.ap_
 
+
 # Files for the ART/Dalvik VM
 *.dex
 
@@ -34,6 +35,7 @@ captures/
 
 # IntelliJ
 *.iml
+.idea/misc.xml
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
