--- a/android/ForWinter/.gitignore
+++ b/android/ForWinter/.gitignore
@@ -1,6 +1,8 @@
 *.iml
 .gradle
 /local.properties
+.idea/caches/build_file_checksums.ser
+/.idea/misc.xml
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
